--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite": "^3.1.2",
     "next": "15.1.2",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
